k8s/concourse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse-ingress
spec:
  rules:
  - host: concourse.morsley.io
    http:
      paths:
      - path: /
        backend:
          serviceName: concourse-web
          servicePort: 8080
